--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -4,23 +4,46 @@
         flex-direction: column;
         margin: 50px;
 
-        input {
-            font-size: 2.5rem;
-            padding: 15px 15px;
-            border-radius: 5px;
-            background: #fbfbfb;
-            border: 2px solid transparent;
-            box-shadow: 0 0 0 1px #dddddd, 0 2px 4px 0 rgb(0 0 0 / 7%), 0 1px 1.5px 0 rgb(0 0 0 / 5%);
-            :focus{
-                border: 2px solid #000;
-                border-radius: 4px;
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+
+            label {
+                font-size: 0.8rem !important;
+                color: grey;
+                margin-bottom: 2px;
+                font-size: 16px;
             }
-        
+
+            input {
+                font-size: 2.5rem;
+                padding: 15px 15px;
+                border-radius: 5px;
+                background: #fbfbfb;
+                border: 2px solid transparent;
+                box-shadow: 0 0 0 1px #dddddd, 0 2px 4px 0 rgb(0 0 0 / 7%), 0 1px 1.5px 0 rgb(0 0 0 / 5%);
+                
+                :focus{
+                    border: 2px solid #000;
+                    border-radius: 4px;
+                }
+            }
+
+            .currency {
+                position: absolute;
+                right: 10px;
+                color: grey;
+                top: 35px;
+                font-size: 2.5rem;
+            }
 
             &:not(:first-child) {
                 margin-top: 25px;
             }
         }
+
+        
     }
 
     .result {
@@ -36,8 +59,8 @@
             font-size: 2.5rem;
         }
 
-        span {
-            font-size: 0.5rem;
+        .label {
+            font-size: 0.8rem;
             color: grey;
         }
     }
