--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="input-group">
         <label for="global-debt">Dettes</label>
-        <input inputmode="numeric" [(ngModel)]="currentGlobalDebt" (change)="changeValue()" type="number" name="global-debt" id="global-debt">
+        <input inputmode="numeric" [(ngModel)]="currentGlobalDebtInput" (change)="changeValue()" type="number" name="global-debt" id="global-debt">
         <div class="positive-or-negative">-</div>
 
         <div class="currency">CHF</div>
